--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	
 	<div class="bg-g1 size1 flex-w flex-col-c-sb p-l-15 p-r-15 p-t-55 p-b-35 respon1">
 		<span></span>
-		<div class="flex-col-c p-t-50 p-b-50">
+		<div class="flex-col-c">
 			<h3 class="l1-txt1 txt-center p-b-10">
 				Gnomo Fest 2019
 			</h3>
@@ -35,7 +35,7 @@
 				
 			</p>
 
-			<div class="flex-w flex-c cd100 p-b-82">
+			<div class="flex-c cd100 p-b-82">
 				<div class="flex-col-c-m size2 how-countdown">
 					<span class="l1-txt3 p-b-9 days">35</span>
 					<span class="s1-txt1">Days</span>
